--- a/LD_Assignment.uproject
+++ b/LD_Assignment.uproject
@@ -58,6 +58,18 @@
 				"Win64",
 				"Android"
 			]
+		},
+		{
+			"Name": "ShallowWater",
+			"Enabled": true
+		},
+		{
+			"Name": "Water",
+			"Enabled": true
+		},
+		{
+			"Name": "Landmass",
+			"Enabled": true
 		}
 	]
 }
